更改路由配置

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         }
     </style>
     <title>Document</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=S4Dj5DA1lQdBzAkLWSoN908Xsjk2kzeE"></script>
 </head>
 <body>
     <div id="app"></div>
